2011-11-09  Csaba Osztrogonác  <ossy@webkit.org>

        Enable the DFG JIT on x86-64 Linux platforms
        https://bugs.webkit.org/show_bug.cgi?id=71373

        Enable DFG JIT by default on X86 Linux and Mac platforms
        https://bugs.webkit.org/show_bug.cgi?id=71686

        Buildfix for stricter compilers: -Werror=unused-but-set-variable

        Reviewed by Zoltan Herczeg.

        * dfg/DFGSpeculativeJIT.cpp:
        (JSC::DFG::SpeculativeJIT::compilePutByValForByteArray):
        * dfg/DFGSpeculativeJIT32_64.cpp:
        (JSC::DFG::SpeculativeJIT::compile):
        * dfg/DFGSpeculativeJIT64.cpp:
        (JSC::DFG::SpeculativeJIT::compile):

2011-11-09  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r99678.
        http://trac.webkit.org/changeset/99678
        https://bugs.webkit.org/show_bug.cgi?id=71882

        broke the build with -Werror=unused-but-set-variable
        (Requested by tronical_ on #webkit).

        * CMakeListsEfl.txt:
        * wtf/Platform.h:

2011-11-09  Andy Wingo  <wingo@igalia.com>

        Enable the DFG JIT on X86-64 Linux platforms
        https://bugs.webkit.org/show_bug.cgi?id=71373

        Reviewed by Filip Pizlo.

        * wtf/Platform.h (ENABLE_DFG_JIT): Enable the DFG JIT on the
        x86-64 GNU/Linux platform.
        * CMakeListsEfl.txt: Add JSValue64 implementations to EFL build.

2011-11-09  Mark Hahnenberg  <mhahnenberg@apple.com>

        De-virtualize JSObject::defineOwnProperty
        https://bugs.webkit.org/show_bug.cgi?id=71429

        Reviewed by Geoffrey Garen.

        Added defineOwnProperty to the MethodTable, changed all the virtual 
        implementations of defineOwnProperty to static ones, and replaced 
        all call sites with corresponding lookups in the MethodTable.

        * JavaScriptCore.exp:
        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.def:
        * runtime/Arguments.cpp:
        (JSC::Arguments::createStrictModeCallerIfNecessary):